# world-chain

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.nitro-parent  Dockerfile.proof  Dockerfile.prover  Dockerfile.worker  INCIDENT-2026-07-01-builder-peering.md  Justfile  README.md  RETH-TRUSTED-PEER-BAN-LIVELOCK.md  TODO.md  audit.md  book.toml  clippy.toml  computed.json  development.html  development.md  docker-proof.yml  expected.json  expected_1.json  ext  flashblocks_p2p.html  flashblocks_p2p_v2.html  got.json  got_1.json  health_checks.html  index.html  overview.html  payload.json  print.html  release-proof.yml  report.txt  rust-ci.yml  rust-ci.yml.new  (+51 more)
acceptance/macros/: Cargo.toml
acceptance/macros/src/: lib.rs
crates/acceptance/: Cargo.toml
crates/acceptance/src/: env.rs  lib.rs  registry.rs  report.rs  runner.rs
crates/builder/: Cargo.toml  build.rs
crates/builder/benches/: coordinator.rs  flashblock_building_live_node.rs  flashblock_validation_live_node.rs  flashblock_validation_mainnet.rs  flashblock_validation_synthetic.rs  live_node.rs
crates/builder/src/: access_list.rs  bal_executor.rs  bal_validator.rs  coordinator.rs  execution_context.rs  execution_strategy.rs  executor.rs  flashblock_types.rs  flashblock_validation_metrics.rs  lib.rs  metrics.rs  payload_builder.rs  payload_builder_metrics.rs  payload_txns.rs  state_db.rs  state_root_strategy.rs  utils.rs  validator.rs
crates/builder/tests/: README.md  flashblock_validation_live_node_profile.rs  flashblock_validation_synthetic_profile.rs
crates/chainspec/: Cargo.toml
crates/chainspec/src/: builder.rs  hardfork.rs  lib.rs  manifest.rs  spec.rs  wip1001.rs
crates/cli/: Cargo.toml
crates/cli/examples/: sk_to_vk.rs
crates/cli/src/: app.rs  chainspec.rs  cli.rs  config.rs  lib.rs
crates/devnet/: Cargo.toml  README.md
crates/devnet/src/: component.rs  full_stack.rs  hardforks.rs  l1.rs  lib.rs  observability.rs  op_stack.rs  process_logs.rs
crates/evm/: Cargo.toml
crates/evm/src/: cache.rs  collector.rs  factory.rs  lib.rs  utils.rs
crates/exex/: BATCHER_SPEC.md  Cargo.toml
crates/exex/src/: cacher.rs  config.rs  db.rs  driver.rs  error.rs  exex.rs  lib.rs  local_node.rs  metrics.rs  provider.rs  relayer_config.rs  rpc.rs  service.rs  tx_fillers.rs  withdrawal.rs  withdrawal_store.rs
crates/exex/tests/: proposer_e2e.rs
crates/kona/: Cargo.toml
crates/kona/src/: client.rs  config.rs  engine_client.rs  handle.rs  lib.rs  service.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs  requirement.rs
crates/node/: Cargo.toml  build.rs
crates/node/src/: add_ons.rs  backfill.rs  context.rs  dev.rs  engine.rs  extensions.rs  launch.rs  lib.rs  node.rs  payload.rs  payload_service.rs  pool.rs  tx_propagation.rs  version.rs
crates/op-batcher/: Cargo.toml
crates/op-batcher/src/: channel.rs  channel_manager.rs  channel_out.rs  config.rs  db.rs  driver.rs  error.rs  exex.rs  lib.rs  local_node.rs  metrics.rs  provider.rs  rpc.rs  service.rs  source.rs  sync.rs  tx.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs
crates/p2p/tests/: protocol.rs
crates/payload/: Cargo.toml
crates/payload/src/: builder.rs  generator.rs  job.rs  lib.rs
crates/pool/: Cargo.toml
crates/pool/src/: bindings.rs  eip4337.rs  error.rs  lib.rs  noop.rs  ordering.rs  root.rs  tx.rs  validator.rs  wia.rs  world_chain_account_manager.rs  world_chain_tx.rs  world_chain_validator.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: access_list.rs  flashblocks.rs  lib.rs  log_reload.rs  op.rs  p2p.rs  payload_id.rs  primitives.rs  test_fixtures.rs  tracing.rs  transaction.rs  wia.rs
crates/proposer/: Cargo.toml  README.md
crates/proposer/src/: alloy.rs  config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: admin.rs  core.rs  engine.rs  lib.rs  sequencer.rs  simulate.rs  simulate_consts.rs  transactions.rs  witness.rs
crates/rpc/tests/: fork_simulate.rs  inspector_shared_buffer.rs
crates/state/: Cargo.toml
crates/state/src/: access_list.rs  lib.rs  state_db.rs
crates/test-utils/: Cargo.toml
crates/test-utils/res/: world_id_verifier_runtime.hex
crates/test-utils/src/: bindings.rs  builder.rs  lib.rs  mock.rs  node.rs  pool.rs  utils.rs
crates/toolkit/: Cargo.toml  README.md
crates/toolkit/src/: cli.rs  main.rs  pbh_contract_client.rs
crates/validator/: Cargo.toml
crates/validator/benches/: flashblock_validation_live_node.rs  flashblock_validation_mainnet.rs  flashblock_validation_synthetic.rs
crates/validator/src/: coordinator.rs  execution_strategy.rs  flashblock_types.rs  flashblock_validation_metrics.rs  lib.rs  state_root_strategy.rs  validator.rs
crates/validator/tests/: README.md  flashblock_validation_live_node_profile.rs  flashblock_validation_synthetic_profile.rs
crates/witness/: Cargo.toml
crates/witness/src/: cache.rs  lib.rs  types.rs
crates/world-chain-builder/: Cargo.toml
crates/world-chain-builder/benches/: coordinator.rs
crates/world-chain-builder/src/: access_list.rs  bal_executor.rs  coordinator.rs  execution_context.rs  lib.rs  metrics.rs  payload_builder.rs  test_utils.rs  validator.rs
crates/world-chain-engine/: Cargo.toml
crates/world-chain-engine/src/: lib.rs  metrics.rs  payload_processor.rs
devnet/genesis/: Cargo.toml  Dockerfile
devnet/genesis/src/: main.rs
e2e-tests/: Cargo.toml
e2e-tests/src/: main.rs
e2e-tests/src/fuzz/: fixtures.rs  mod.rs  proptest.rs
e2e-tests/src/it/: admin_tracing.rs  defender_e2e.rs  devnet_smoke.rs  devnet_withdrawal.rs  mod.rs  testsuite.rs
world-chain-builder/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  comms.txt  id_comms.txt  pbh_bundle.json  test_identities.json  x
world-chain-builder/benches/: validate_transaction.rs
world-chain-builder/crates/tests/: Cargo.toml
world-chain-builder/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: acceptance.rs  devnet.rs  docs.rs  hooks.rs  main.rs  preflight.rs  swarm.rs
xtask/src/stress/: mod.rs
(+1268 files in other folders)
