[workspace.package]
version = "1.9.3"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
homepage = "https://world.org/world-chain"
repository = "https://github.com/worldcoin/world-chain/"

[workspace]
resolver = "3"
members = [
    "crates/tests/*",
    "crates/toolkit",
    "crates/world/*",
    "crates/flashblocks/p2p",
    "crates/flashblocks/primitives",
    "crates/flashblocks/rpc",
    "crates/flashblocks/builder",
    "crates/flashblocks/payload",
    "crates/flashblocks/node",
    "crates/flashblocks/cli",
]
default-members = [
    "crates/flashblocks/p2p",
    "crates/flashblocks/primitives",
    "crates/flashblocks/rpc",
    "crates/flashblocks/builder",
    "crates/flashblocks/payload",
    "crates/flashblocks/node",
    "crates/flashblocks/cli",
    "crates/world/bin",
    "crates/world/node",
    "crates/world/payload",
    "crates/world/rpc",
    "crates/world/pbh",
    "crates/world/pool",
    "crates/tests/sepolia",
    "crates/tests/devnet",
]

[profile.maxperf]
codegen-units = 1
inherits = "release"
lto = "fat"

[workspace.lints]

[workspace.dependencies]
# Flashblocks
flashblocks-node = { path = "crates/flashblocks/node" }
flashblocks-p2p = { path = "crates/flashblocks/p2p" }
flashblocks-primitives = { path = "crates/flashblocks/primitives" }
flashblocks-rpc = { path = "crates/flashblocks/rpc" }
flashblocks-builder = { path = "crates/flashblocks/builder" }
flashblocks-payload = { path = "crates/flashblocks/payload" }
flashblocks-cli = { path = "crates/flashblocks/cli" }

# Internal
world-chain-node = { path = "crates/world/node" }
world-chain-pbh = { path = "crates/world/pbh" }
world-chain-payload = { path = "crates/world/payload" }
world-chain-rpc = { path = "crates/world/rpc" }
world-chain-pool = { path = "crates/world/pool" }
world-chain-test = { path = "crates/world/test" }

# reth
reth = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-cli-util = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-cli = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-engine-primitives = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-evm = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d", features = [
    "op",
] }
reth-db = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-db-api = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-provider = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d", features = [
    "test-utils",
] }
reth-basic-payload-builder = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-transaction-pool = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-rpc-server-types = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-rpc = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-rpc-eth-api = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-rpc-eth-types = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-prune-types = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-trie = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-chain-state = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-ethereum = { git = "https://github.com/worldcoin/reth", features = [
    "network",
], rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-eth-wire = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-eth-wire-types = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-stages-types = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-trie-db = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-primitives-traits = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-node-builder = { git = "https://github.com/worldcoin/reth", features = [
    "test-utils",
], rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-engine-local = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d", features = [
    "op",
] }
reth-node-api = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-payload-builder = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-payload-primitives = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-payload-util = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-payload-validator = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-revm = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d", default-features = false, features = [
    "std",
] }
reth-tasks = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-trie-common = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-chainspec = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-rpc-engine-api = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-network = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-network-api = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-network-peers = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }

# reth-optimism
reth-primitives = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-evm = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-node = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-cli = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-rpc = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-consensus = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-chainspec = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth_payload_util = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-payload-builder = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-forks = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-primitives = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-e2e-test-utils = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-consensus = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-node-core = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-tracing = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-rpc-layer = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-node-ethereum = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-storage = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-storage-api = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-op = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }
reth-optimism-flashblocks = { git = "https://github.com/worldcoin/reth", rev = "1ca77dcd3caf8e8eb0151e8ebcc42b776b05300d" }

# alloy op
op-alloy-consensus = { version = "0.22.0", default-features = false }
op-alloy-rpc-types = { version = "0.22.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.22.0", default-features = false }
op-alloy-network = { version = "0.22.0", default-features = false }
alloy-op-hardforks = { version = "0.4.4", default-features = false }

# alloy
alloy = { version = "1.1.2" }
alloy-json-rpc = { version = "1.1.2", default-features = false }
alloy-chains = { version = "0.2.5", default-features = false }
alloy-provider = { version = "1.1.2", default-features = false }
alloy-rpc-client = { version = "1.1.2", default-features = false }
alloy-transport-http = { version = "1.1.2", default-features = false }
alloy-transport = { version = "1.1.2", default-features = false }
alloy-consensus = { version = "1.1.2", default-features = false }
alloy-network = { version = "1.1.2", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = [
    "rand",
    "arbitrary",
] }
alloy-contract = { version = "1.1.2", default-features = false }
alloy-rpc-types-eth = { version = "1.1.2", default-features = false }
alloy-rpc-types = { version = "1.1.2", features = [
    "eth",
], default-features = false }
alloy-rpc-types-engine = { version = "1.1.2" }
alloy-rlp = { version = "0.3.10", default-features = false, features = [
    "derive",
] }
alloy-eips = { version = "1.1.2", default-features = false }
alloy-eip7928 = { git = "https://github.com/alloy-rs/eips", rev = "307eae2", default-features = false, features = [
    "serde",
    "rlp",
] }
alloy-genesis = { version = "1.1.2", default-features = false }
alloy-rpc-types-debug = "1.1.2"
alloy-signer = { version = "1.1.2", default-features = false }
alloy-signer-local = { version = "1.1.2", default-features = false, features = [
    "mnemonic",
] }
alloy-sol-types = "1.4.1"
alloy-serde = { version = "1.1.2", default-features = false }
alloy-hardforks = { version = "0.4.4", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false, features = [
    "ethereum",
] }
# revm
revm = { version = "33.1.0", default-features = false }
revm-bytecode = { version = "7.1.1", default-features = false }
revm-database = { version = "9.0.5", default-features = false }
revm-state = { version = "8.1.1", default-features = false }
revm-primitives = { version = "21.0.2", default-features = false }
revm-interpreter = { version = "31.1.0", default-features = false }
revm-database-interface = { version = "8.0.5", default-features = false }
op-revm = { version = "14.1.0", default-features = false }
revm-inspectors = "0.33.0"
# revm-inspectors = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }

alloy-op-evm = { version = "0.24.1", default-features = false }
alloy-evm = { version = "0.24.1", default-features = false }

# rpc
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
jsonrpsee-core = { version = "0.26.0" }
jsonrpsee-types = "0.26.0"

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"

tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.15"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28.0"

crossbeam-channel = "0.5"
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
thiserror = "2"
strum = { version = "0.27", features = ["derive"] }
bytemuck = "1"
semaphore-rs = { version = "0.3.1", features = ["depth_30"] }
semaphore-rs-tree = "0.3.1"
semaphore-rs-proof = "0.3.1"
clap = { version = "4", features = ["derive", "env"] }
eyre = { version = "0.6", package = "color-eyre" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
parking_lot = "0.12"
derive_more = { version = "2", default-features = false, features = ["full"] }
dotenvy = "0.15.7"
tikv-jemallocator = { version = "0.6" }
bytes = "1.7.2"
hex = "0.4.3"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
test-case = "3"
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
serde_json = "1"
rand = { version = "0.9", features = ["small_rng"] }
reqwest = { version = "0.12", default-features = false }
bon = "3.3.0"
rayon = "1.10.0"
auto_impl = "1"
async-trait = "0.1.88"
dashmap = { version = "6.1.0", features = ["rayon"] }
tower = "0.5.0"
backon = "1"
arbitrary = { version = "=1.4.2", features = ["derive"] }
blake3 = "1.8.2"
ed25519-dalek = { version = "2", features = ["serde"] }
sha2 = "0.10.9"
url = "2.5.7"
brotli = "8.0.2"
once_cell = "1.19"
either = { version = "1.15.0", default-features = false }

# Test
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
lazy_static = "1.4"
proptest = "1.9.0"

[patch.crates-io]
# TODO: Remove once new versions is published
revm = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }
revm-database = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }
revm-bytecode = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }
revm-state = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }
revm-primitives = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }
revm-interpreter = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }
revm-database-interface = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }
op-revm = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }
# revm-inspectors = { git = "https://github.com/0xforerunner/revm", rev = "195c8e9" }

alloy-op-evm = { git = "https://github.com/0xforerunner/evm", rev = "9de0fb0" }
alloy-evm = { git = "https://github.com/0xforerunner/evm", rev = "9de0fb0" }
