[workspace.package]
version = "1.11.3"
edition = "2024"
rust-version = "1.92.0"
license = "MIT"
homepage = "https://world.org/world-chain"
repository = "https://github.com/worldcoin/world-chain/"

[workspace]
resolver = "3"
members = [
    "bin/world-chain",
    "crates/node",
    "crates/rpc",
    "crates/primitives",
    "crates/cli",
    "crates/p2p",
    "crates/builder",
    "crates/payload",
    "crates/pool",
    "crates/pbh",
    "crates/test-utils",
    "e2e-tests",
    "xtask",
]

default-members = ["bin/world-chain"]

[profile.maxperf]
codegen-units = 1
inherits = "release"
lto = "fat"
strip = "none"
panic = "abort"

[profile.dev-tracing]
inherits = "dev"

[profile.verbose-tracing]
inherits = "dev"

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[workspace.lints]

[workspace.dependencies]
# World Chain
world-chain-primitives = { path = "crates/primitives" }
world-chain-cli = { path = "crates/cli" }
world-chain-p2p = { path = "crates/p2p" }
world-chain-builder = { path = "crates/builder" }
world-chain-payload = { path = "crates/payload" }
world-chain-node = { path = "crates/node" }
world-chain-pbh = { path = "crates/pbh" }
world-chain-rpc = { path = "crates/rpc" }
world-chain-pool = { path = "crates/pool" }
world-chain-test-utils = { path = "crates/test-utils" }

# reth
reth = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-cli-util = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-cli = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-engine-primitives = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-evm = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1", features = [
    "op",
] }
reth-db = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-db-api = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-provider = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1", features = [
    "test-utils",
] }
reth-basic-payload-builder = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-transaction-pool = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-rpc-server-types = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-rpc = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-rpc-eth-api = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-rpc-eth-types = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-prune-types = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-trie = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-chain-state = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-ethereum = { git = "https://github.com/worldcoin/reth", features = [
    "network",
], rev = "4c1b4a1" }
reth-eth-wire = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-eth-wire-types = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-stages-types = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-trie-db = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-primitives-traits = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-node-builder = { git = "https://github.com/worldcoin/reth", features = [
    "test-utils",
], rev = "4c1b4a1" }
reth-engine-local = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1", features = [
    "op",
] }
reth-engine-tree = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-node-api = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-payload-builder = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-payload-primitives = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-payload-util = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-payload-validator = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-revm = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1", default-features = false, features = [
    "std",
] }
reth-tasks = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-trie-common = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-chainspec = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-rpc-engine-api = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-network = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-network-api = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-network-peers = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-primitives = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-e2e-test-utils = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-consensus = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-node-core = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-tracing = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-rpc-layer = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-node-ethereum = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth-storage-api = { git = "https://github.com/worldcoin/reth", rev = "4c1b4a1" }
reth_payload_util = { git = "https://github.com/ethereum-optimism/optimism", rev = "954e507" }

# reth-optimism 7bf99eb46019
reth-optimism-evm = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-node = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-cli = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-rpc = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-consensus = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-chainspec = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-payload-builder = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-forks = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-primitives = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-storage = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-op = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
reth-optimism-flashblocks = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }

# alloy op
op-alloy-consensus = { version = "0.23.1", default-features = false }
op-alloy-rpc-types = { version = "0.23.1", default-features = false }
op-alloy-rpc-types-engine = { version = "0.23.1", default-features = false }
op-alloy-network = { version = "0.23.1", default-features = false }
alloy-op-hardforks = { version = "0.4.4", default-features = false }
op-alloy-provider = { version = "0.23.1", default-features = false }

# alloy
alloy = { version = "1.1.2" }
alloy-json-rpc = { version = "1.1.2", default-features = false }
alloy-chains = { version = "0.2.5", default-features = false }
alloy-provider = { version = "1.1.2", default-features = false }
alloy-rpc-client = { version = "1.1.2", default-features = false }
alloy-transport-http = { version = "1.1.2", default-features = false }
alloy-transport = { version = "1.1.2", default-features = false }
alloy-consensus = { version = "1.1.2", default-features = false }
alloy-network = { version = "1.1.2", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = [
    "rand",
    "arbitrary",
] }
alloy-contract = { version = "1.1.2", default-features = false }
alloy-rpc-types-eth = { version = "1.1.2", default-features = false }
alloy-rpc-types = { version = "1.1.2", features = [
    "eth",
], default-features = false }
alloy-rpc-types-engine = { version = "1.1.2" }
alloy-rlp = { version = "0.3.10", default-features = false, features = [
    "derive",
] }
alloy-eips = { version = "1.1.2", default-features = false }
alloy-eip7928 = { git = "https://github.com/alloy-rs/eips", rev = "307eae2", default-features = false, features = [
    "serde",
    "rlp",
] }
alloy-genesis = { version = "1.1.2", default-features = false }
alloy-rpc-types-debug = "1.1.2"
alloy-signer = { version = "1.1.2", default-features = false }
alloy-signer-local = { version = "1.1.2", default-features = false, features = [
    "mnemonic",
] }
alloy-sol-types = "1.4.1"
alloy-serde = { version = "1.1.2", default-features = false }
alloy-hardforks = { version = "0.4.4", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false, features = [
    "ethereum",
] }

# revm
revm = { version = "34", default-features = false }
revm-bytecode = { version = "8", default-features = false }
revm-database = { version = "10", default-features = false }
revm-state = { version = "9", default-features = false }
revm-primitives = { version = "22", default-features = false }
revm-interpreter = { version = "32", default-features = false }
revm-database-interface = { version = "9", default-features = false }
op-revm = { version = "15", default-features = false }
revm-inspectors = "0.34"

alloy-op-evm = { version = "0.27", default-features = false }
alloy-evm = { version = "0.27", default-features = false }
# rpc
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
jsonrpsee-core = { version = "0.26.0" }
jsonrpsee-types = "0.26.0"

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"

tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.15"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28.0"

crossbeam-channel = "0.5"
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
thiserror = "2"
strum = { version = "0.27", features = ["derive"] }
bytemuck = "1"
semaphore-rs = { version = "0.5", features = ["depth_30"] }
semaphore-rs-proof = "0.5"
clap = { version = "4", features = ["derive", "env"] }
eyre = { version = "0.6", package = "color-eyre" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
parking_lot = "0.12"
derive_more = { version = "2", default-features = false, features = ["full"] }
dotenvy = "0.15.7"
tikv-jemallocator = { version = "0.6" }
bytes = "1.7.2"
hex = "0.4.3"
tempfile = "3"
criterion = { version = "0.8", features = ["async_tokio"] }
test-case = "3"
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
serde_json = "1"
rand = { version = "0.9", features = ["small_rng"] }
reqwest = { version = "0.12", default-features = false }
bon = "3.3.0"
rayon = "1.10.0"
auto_impl = "1"
async-trait = "0.1.88"
dashmap = { version = "6.1.0", features = ["rayon"] }
tower = "0.5.0"
backon = "1"
arbitrary = { version = "=1.4.2", features = ["derive"] }
blake3 = "1.8.2"
ed25519-dalek = { version = "2", features = ["serde"] }
sha2 = "0.10.9"
url = "2.5.7"
brotli = "8.0.2"
once_cell = "1.19"
either = { version = "1.15.0", default-features = false }
pin-project = "1.0.1"

# Test
testcontainers = "0.27"
testcontainers-modules = { version = "0.14", features = ["redis"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
lazy_static = "1.4"
proptest = "1.9.0"

[patch.crates-io]
op-alloy = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
op-alloy-consensus = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
op-alloy-network = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
op-alloy-rpc-types = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }
op-alloy-rpc-types-engine = { git = "https://github.com/0xForerunner/optimism", rev = "954e507" }

alloy-op-evm = { git = "https://github.com/0xforerunner/evm", rev = "f9a7b1250" }
alloy-evm = { git = "https://github.com/0xforerunner/evm", rev = "f9a7b1250" }
